# ustc-database-learning-platform

./: .gitignore  API.md  README.md  USTC_database.md  database.md  work.md
server/: .env.example  API_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  check_migration.py  database_schema.sql  main.py  pyproject.toml  readme.md  test_email.py
server/app/: config.py  database.py  main.py
server/app/api/: deps.py
server/app/core/: config.py  email.py  enums.py  password_reset.py  time_utils.py
server/app/crud/: __init__.py  admin.py  base.py  crud_announcement.py  crud_category.py  crud_course.py  crud_role.py  crud_section.py  crud_user.py  enrollments.py  resources.py  scores.py  tasks.py
server/app/db/: base.py  mysql_pool.py  query_helper.py  session.py
server/app/middleware/: operation_log.py
server/app/models/: __init__.py  announcement.py  base.py  course.py  enrollment.py  operation_log.py  resource.py  role.py  section.py  submission.py  task.py  user.py
server/app/routers/: __init__.py  admin.py  auth.py  courses.py  enrollments.py  resources.py  scores.py  sections.py  tasks.py  upload.py  uploads.py  users.py
server/app/schemas/: __init__.py  announcements.py  course.py  courses.py  enrollments.py  password_reset.py  resources.py  role.py  scores.py  section.py  submissions.py  user.py  (+3 more)
server/tests/: README.md  TESTING_GUIDE.md  TEST_COVERAGE_REPORT.md  conftest.py  test_admin.py  test_all_endpoints.py  test_api_flow.py  test_auth.py  test_courses.py  test_enrollments.py  test_integration.py  test_scores.py  test_sections.py  test_tasks.py  test_upload.py  test_users.py
(+37 files in other folders)
