[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "uvicorn[standard]>=0.30.1",
    "aiomysql>=0.2.0",
    "cryptography>=41.0.0",
]
