[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "aiomysql>=0.2.0",
    "alembic>=1.17.2",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.122.0",
    "greenlet>=3.2.4",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
